Layout bug fixes

--- a/src/pages/AboutMe/AboutMe.css
+++ b/src/pages/AboutMe/AboutMe.css
@@ -62,7 +62,7 @@
 
     .aboutme-title {
 
-        font-size: 100px;
+        font-size: 98px;
 
     }
     
@@ -72,7 +72,7 @@
         height: 304px;
         left: 276px;
         top: 214px;
-        font-size: 28px;
+        font-size: 26px;
     }
 
 }
