--- a/src/pages/MyWork/MyWork.css
+++ b/src/pages/MyWork/MyWork.css
@@ -71,7 +71,7 @@
         height: 120px;
         left: 418px;
         top: 26px;
-        font-size: 128px;
+        font-size: 98px;
 
     }
 
@@ -81,7 +81,7 @@
         width: 1217px;
         height: 272px;
         left: 70px;
-        top: 195px;
+        top: 140px;
         font-size: 17px;
         text-align: center;
     }
